--- a/Src/API/API.csproj
+++ b/Src/API/API.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Helpers\Helpers.csproj" />
     <ProjectReference Include="..\Modulos\CalculoImposto\CalculoImposto.csproj" />
     <ProjectReference Include="..\Modulos\IncidenciasImpostosReformaTributaria\IncidenciasImpostosReformaTributaria.csproj" />
     <ProjectReference Include="..\Modulos\NfeXml\NfeXml.csproj" />
