--- a/Src/API/API.csproj
+++ b/Src/API/API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -13,7 +13,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Helpers\Helpers.csproj" />
     <ProjectReference Include="..\Modulos\CalculoImposto\CalculoImposto.csproj" />
-    <ProjectReference Include="..\Modulos\IncidenciasImpostosReformaTributaria\IncidenciasImpostosReformaTributaria.csproj" />
     <ProjectReference Include="..\Modulos\NfeXml\NfeXml.csproj" />
   </ItemGroup>
 
