--- a/Src/Modulos/NfeXml/NfeXml.csproj
+++ b/Src/Modulos/NfeXml/NfeXml.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\Input\" />
+  </ItemGroup>
+
 </Project>
