--- a/Src/Modules/CalculoImposto/CalculoImposto.csproj
+++ b/Src/Modules/CalculoImposto/CalculoImposto.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Integrations\CalculadoraConsumo\Dtos\Input\" />
+    <Folder Include="Integrations\CalculadoraConsumo\Dtos\Output\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
