Integração com API da calculadora de consumos, passa a ser realizada através de um novo projeto Integrations.

--- a/Src/API/API.csproj
+++ b/Src/API/API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Helpers\Helpers.csproj" />
+    <ProjectReference Include="..\Integrations\Integrations.csproj" />
     <ProjectReference Include="..\Modules\CalculoImposto\CalculoImposto.csproj" />
     <ProjectReference Include="..\Modules\NfeXml\NfeXml.csproj" />
   </ItemGroup>
