--- a/Src/API/appsettings.json
+++ b/Src/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Urls": {
+    "CalculadoraConsumoApi": "https://piloto-cbs.tributos.gov.br/servico/calculadora-consumo/api/calculadora/"
+  }
 }
