--- a/Src/Modules/CalculoImposto/CalculoImposto.csproj
+++ b/Src/Modules/CalculoImposto/CalculoImposto.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Helpers\Helpers.csproj" />
+    <ProjectReference Include="..\..\Integrations\Integrations.csproj" />
+  </ItemGroup>
+
 </Project>
